fix styles for menu | wip on collapsing menu after click on link

--- a/app/components/Topbar/Topbar.scss
+++ b/app/components/Topbar/Topbar.scss
@@ -19,6 +19,10 @@
         color: rgb(252, 45, 45);
         transform: translateY(-3px);
     }
+
+    &.mobile {
+        text-align: left;
+    }
 }
 
 .icons {
